--- a/WishListBackend/appsettings.json
+++ b/WishListBackend/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "Issuer": "http://localhost:3000",
+    "Audience": "http://localhost:3000",
+    "SigningKey": "mysupersecret_secretkey!1234567890",
+    "ExpirationSeconds": 3600
+  }
 }
