--- a/WishListBackend/appsettings.json
+++ b/WishListBackend/appsettings.json
@@ -5,11 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "JwtOptions": {
     "Issuer": "http://localhost:3000",
     "Audience": "http://localhost:3000",
     "SigningKey": "mysupersecret_secretkey!1234567890",
     "ExpirationSeconds": 3600
-  }
+  },
+  "EmailConfiguration": {
+    "From": "diana.aristova.99@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "diana.aristova.99@gmail.com",
+    "Password": "Zvoni281713"
+  },
+  "AllowedHosts": "*"
 }
