--- a/WishListBackend/appsettings.json
+++ b/WishListBackend/appsettings.json
@@ -12,11 +12,11 @@
     "ExpirationSeconds": 3600
   },
   "EmailConfiguration": {
-    "From": "diana.aristova.99@gmail.com",
+    "From": "",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "diana.aristova.99@gmail.com",
-    "Password": "Zvoni281713"
+    "Username": "",
+    "Password": ""
   },
   "AllowedHosts": "*"
 }
