--- a/WishListBackend/appsettings.json
+++ b/WishListBackend/appsettings.json
@@ -11,5 +11,12 @@
     "SigningKey": "mysupersecret_secretkey!1234567890",
     "ExpirationSeconds": 3600
   },
+  "EmailConfiguration": {
+    "From": "",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "",
+    "Password": ""
+  },
   "AllowedHosts": "*"
 }
