Use smtp client to send emails.

--- a/WishListBackend/appsettings.json
+++ b/WishListBackend/appsettings.json
@@ -12,11 +12,11 @@
     "ExpirationSeconds": 3600
   },
   "EmailConfiguration": {
-    "From": "",
-    "SmtpServer": "smtp.gmail.com",
+    "From": "testovyy.akk.01@bk.ru",
+    "SmtpServer": "smtp.mail.ru",
     "Port": 465,
-    "Username": "",
-    "Password": ""
+    "Username": "testovyy.akk.01@bk.ru",
+    "Password": "r0QuL9T1HNWU6bK8xzwt"
   },
   "AllowedHosts": "*"
 }
