--- a/WishListBackend/appsettings.json
+++ b/WishListBackend/appsettings.json
@@ -9,7 +9,7 @@
     "Issuer": "http://localhost:3000",
     "Audience": "http://localhost:3000",
     "SigningKey": "mysupersecret_secretkey!1234567890",
-    "ExpirationSeconds": 3600
+    "ExpirationMin": 2
   },
   "EmailConfiguration": {
     "From": "testovyy.akk.01@bk.ru",
